@@ -13,7 +13,7 @@ L 400 400 400 0 3
 L 700 200 500 200 3
 L 400 200 200 200 3
 T 400 600 5 10 0 0 0
-device=POLARIZED CAPACITOR
+device=POLARIZED_CAPACITOR
 A 1200 200 700 165 30 3
 L 289 400 289 300 3
 L 340 349 240 349 3
