@@ -18,7 +18,3 @@ L 400 400 400 0 3
 L 500 400 500 0 3
 L 700 200 500 200 3
 L 400 200 200 200 3
-{
-T 300 600 5 10 0 0 0
-device=CAPACITOR
-}
