@@ -1,7 +1,7 @@
 v 19990516
 L 200 400 700 0 3
 T 500 500 5 10 0 0 0
-device=VARIABLE CAPACITOR
+device=VARIABLE_CAPACITOR
 L 700 0 600 0 3
 L 700 0 700 100 3
 P 0 200 200 200 1
