@@ -1,7 +1,7 @@
 v 19990516
 L 250 650 250 150 3
 T 600 500 5 10 0 0 0
-device=NMOS TRANSISTOR
+device=NMOS_TRANSISTOR
 L 200 550 200 250 3
 L 250 600 500 600 3
 L 250 200 500 200 3
