@@ -1,7 +1,7 @@
 v 19990516
 L 200 800 200 200 3
 T 600 500 5 10 0 0 0
-device=NPN TRANSISTOR
+device=NPN_TRANSISTOR
 L 500 800 200 500 3
 L 200 500 500 200 3
 P 0 500 200 500 1
