@@ -2,7 +2,7 @@ v 19990516
 L 200 800 200 0 3
 L 200 800 800 400 3
 T 600 600 5 10 0 0 0
-device=OPERATIONAL AMPLIFIER
+device=OPERATIONAL_AMPLIFIER
 L 800 400 200 0 3
 L 300 650 300 550 3
 L 250 600 350 600 3
