@@ -1,7 +1,7 @@
 v 19991011
 L 200 900 200 100 3
 T 600 700 5 10 0 0 0
-device=OPERATIONAL AMPLIFIER
+device=OPERATIONAL_AMPLIFIER
 L 300 850 300 750 3
 L 250 800 350 800 3
 L 250 200 350 200 3
