@@ -1,7 +1,7 @@
 v 19990516
 L 300 600 300 200 3
 T 600 500 5 10 0 0 0
-device=PMOS TRANSISTOR
+device=PMOS_TRANSISTOR
 L 200 600 200 200 3
 L 300 600 500 600 3
 L 300 200 500 200 3
