@@ -1,7 +1,7 @@
 v 19990516
 L 200 800 200 200 3
 T 600 400 5 10 0 0 0
-device=PNP TRANSISTOR
+device=PNP_TRANSISTOR
 P 0 500 200 500 1
 {
 T 100 550 5 6 1 1 0
