@@ -11,7 +11,7 @@ pin3=E
 }
 V 500 501 316 3
 T 900 500 5 10 0 0 0
-device=PNP TRANSISTOR
+device=PNP_TRANSISTOR
 L 600 200 400 400 3
 L 600 800 400 600 3
 L 400 700 400 300 3
