@@ -123,4 +123,4 @@ L 2200 850 2200 1100 3
 L 2500 850 2500 1100 3
 L 2700 1100 100 1100 3
 T 100 1200 5 10 0 0 0
-device=RESISTORPACK 10
+device=RESISTORPACK_10
