@@ -71,4 +71,4 @@ L 1000 850 1000 1100 3
 L 1300 850 1300 1100 3
 L 100 1100 1500 1100 3
 T 100 1400 5 10 0 0 0
-device=RESISTORPACK 6
+device=RESISTORPACK_6
