@@ -11,7 +11,7 @@ pin2=2
 }
 V 450 200 200 3
 T 600 1000 5 10 0 0 0
-device=VOLTAGE SOURCE
+device=VOLTAGE_SOURCE
 L 200 200 250 200 3
 L 650 200 700 200 3
 A 400 200 50 0 180 3
