@@ -11,7 +11,7 @@ pin1=1
 }
 V 200 450 200 3
 T -600 600 9 8 0 0 90
-device=VOLTAGE SOURCE
+device=VOLTAGE_SOURCE
 L 200 200 200 250 3
 L 200 650 200 700 3
 T 175 500 9 10 1 0 0
