@@ -3,7 +3,7 @@ L 300 400 300 0 3
 L 600 200 300 0 3
 L 600 200 300 400 3
 T 400 600 5 10 0 0 0
-device=ZENER DIODE
+device=ZENER_DIODE
 L 600 400 600 0 3
 P 900 200 700 200 1
 {
