@@ -61,4 +61,4 @@ L 1400 500 500 500 3
 L 1400 200 500 200 3
 B 0 0 500 3100 3
 T 1900 3000 5 10 0 0 0
-device=CONNECTOR 10
+device=CONNECTOR_10
