@@ -97,4 +97,4 @@ L 1500 600 600 600 3
 L 1500 300 600 300 3
 B 100 100 500 4900 3
 T 1900 4900 5 10 0 0 0
-device=CONNECTOR 16
+device=CONNECTOR_16
