@@ -12,5 +12,5 @@ pin1=1
 L 1400 500 500 500 3
 L 1400 200 500 200 3
 T 200 1000 5 10 0 0 0
-device=CONNECTOR 2
+device=CONNECTOR_2
 B 0 0 500 700 3
