@@ -157,4 +157,4 @@ L 1500 600 600 600 3
 L 1500 300 600 300 3
 B 100 100 500 7900 3
 T 2000 7800 5 10 0 0 0
-device=CONNECTOR 26
+device=CONNECTOR_26
