@@ -19,4 +19,4 @@ L 1400 500 500 500 3
 L 1400 200 500 200 3
 B 0 0 500 1000 3
 T 1800 900 5 10 0 0 0
-device=CONNECTOR 10
+device=CONNECTOR_10
