@@ -18,7 +18,7 @@ L 1400 800 500 800 3
 L 1400 500 500 500 3
 L 1400 200 500 200 3
 T 1800 900 5 10 0 0 0
-device=CONNECTOR 10
+device=CONNECTOR_10
 P 1400 1100 1700 1100 1
 {
 T 250 1050 5 8 1 1 0
