@@ -37,4 +37,4 @@ L 1400 500 500 500 3
 L 1400 200 500 200 3
 B 0 0 500 1900 3
 T 1800 1800 5 10 0 0 0
-device=CONNECTOR 6
+device=CONNECTOR_6
