@@ -11,6 +11,11 @@ Most recent changes (version wise) are at the top of this file
 All the changes are usually noted in this file when they are checked
 into the cvs repository.
 
+2000-02-08  Ales Hvezda  <ahvezda@geda.seul.org>
+
+	* */*.sym: Removed all spaces from all device= attributes.  This is
+	  to make the pcb netlister(s) happy.
+
 2000-02-07  Ales Hvezda  <ahvezda@geda.seul.org>
 
 	* misc/include-1.sym: Added symbol by Bas for use with gnetlist spice
