@@ -9,6 +9,11 @@ Most recent changes (version wise) are at the top of this file
 All the changes are usually noted in this file when they are checked
 into the cvs repository.
 
+2000-02-15  Ales Hvezda  <ahvezda@geda.seul.org>
+
+	* src/o_attrib.c: Made o_attrib_add_attrib return a pointer to the
+	  attached (or new) attribute.
+
 2000-02-01  Ales Hvezda  <ahvezda@geda.seul.org>
 
 	* src/x_pagesel.c: Added a hierarchy level flag as well as rearranged
